app/assets/stylesheets/application.scss
/* ... */
body{
  display: flex;
  flex-direction: column;
}
.footer{

  margin-top: auto;

}
.main-category{
  transition: all 0.5s ease;
  overflow: hidden;
  max-height: 0;
  z-index: 100;
}
.all-category:hover .main-category{
  max-height: 3000px;
}
.all-category{
  z-index: 100;
}

.sub-category{
  display: none !important;
}
.mega-menu{
  display: none !important;
}
.main-mega:hover >.mega-menu{
  display: inline-block !important;
}

 li:hover > .sub-category{
  display: inline-block !important;

}

.shop .range #slider-range .ui-slider-range{
  position: relative;
  height: 5px;
}
body{
  overflow-y: hidden;
}
.scroll {
  overflow: auto;
}
.shop .range .ui-slider-handle.ui-state-default.ui-corner-all{
  position: absolute;
  display: block;
}
.shop .range #slider-range{
  position: relative;
}

.add_product_section{
   flex: 0 0 100%;
   max-width: 100%;
}
.add_photo_btn{
  background-color: white;
  color: black;
  border: 3px black solid;
}

.img-preloader{
display: flex;
flex-direction: row;
flex-wrap: wrap;
}
.img-wrapper{
height: 150px;
margin-bottom: 15px;
}
.img-wrapper img{
  max-height:150px;
  margin-right: 15px;
}
.label-container input {
  display: none;
}
.label-container label{
  color: white !important;
  cursor: pointer;
}
.label-container{
  padding: 10px 30px 10px 0;
}



.form-group .nice-select{
  padding-top: 5px;
}

.form_row{
  margin-left: 0;
  margin-right: 0;
}
.title{
  padding-left: 5px;
  padding-right: 5px;
}

.add-to-cart{
  text-align: right;

}

.limiter {
  width: 100%;
  margin: 0 auto;
}

.container-table100 {
  width: 100%;
  min-height: 100vh;
  background: #c850c0;
  background: -webkit-linear-gradient(45deg, #4158d0, #c850c0);
  background: -o-linear-gradient(45deg, #4158d0, #c850c0);
  background: -moz-linear-gradient(45deg, #4158d0, #c850c0);
  background: linear-gradient(45deg, #4158d0, #c850c0);

  display: -webkit-box;
  display: -webkit-flex;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  padding: 33px 30px;
}

.wrap-table100 {
  width: 1170px;
}

table {
  border-spacing: 1;
  border-collapse: collapse;
  background: white;
  border-radius: 10px;
  overflow: hidden;
  width: 100%;
  margin: 0 auto;
  position: relative;
}
table * {
  position: relative;
}
table td, table th {
  padding-left: 8px;
}
table thead tr {
  height: 60px;
  background: #333;
}
table tbody tr {
  height: 50px;
}
table tbody tr:last-child {
  border: 0;
}
table td, table th {
  text-align: left;
}
table td.l, table th.l {
  text-align: right;
}
table td.c, table th.c {
  text-align: center;
}
table td.r, table th.r {
  text-align: center;
}


.table100-head th{
  font-family: OpenSans-Regular;
  font-size: 18px;
  color: #fff;
  line-height: 1.2;
  font-weight: unset;
}

tbody tr:nth-child(even) {
  background-color: #f5f5f5;
}

tbody tr {
  font-size: 15px;
  color: #808080;
  line-height: 1.2;
  font-weight: unset;
}

tbody tr:hover {
  color: #555555;
  background-color: #f5f5f5;
  cursor: pointer;
}

.column1 {
  width: 260px;
  padding-left: 40px;
}

.column2 {
  width: 160px;
}




.left{
  width: 30%;
  text-align: left;
}
.buttons_group {
  width: 70%;
}
.add-to-cart{
  display: flex;
}
.quickview-ratting-review {
  display: flex;
  padding-left: 15px;

}
.categories {
  text-align: left;


}
.categories>p {
  background-color: #dadada;
  display: inline-block;
  padding: 10px;
  margin-bottom: 10px;
  margin-right: 10px;
}
.title.inside_title {
  padding-top: 20px;
  margin-bottom: 18px;
}
.reviews {
  width: 100%;
  margin-top: 25px;
}
.set_rating {
  unicode-bidi: bidi-override;
  direction: rtl;
}

.set_rating > span {
  display: inline-block;
  position: relative;
  width: 1.1em;
  font-size: 20px;
}
.set_rating > span:hover:before,
.set_rating > span:hover ~ span:before {
   content: "\2605";
   position: absolute;
}
.reviewer_name {
  font-weight: bold;
  text-align: center;
}
.user_attributes > img {
  max-height: 150px;

}
.user_attributes {
  width: 20%;
  text-align: center;
  padding-right: 10px;
}
.single_review {
  padding: 10px;
  border: 1px solid #e6e2f5;
  border-radius: 6px;
  display: flex;
  margin-bottom: 10px;
}
.view_review_rating > span {
  font-size: 20px;
  content: "\2605";
}
.review_text {
  margin-top: 20px;
  margin-bottom: 10px;
  color: #757575;
}
.date {
  text-align: right;
  
}
.show_main_photo {
  max-height: 400px;
}
.show_default_img {
 max-height: 200px;
 object-fit: contain;
}

@media (max-width: 580px) {
  .single_review {
    flex-direction: row;
  }
  .review_text {
    width: 70%;
  }
  .user_attributes {
    min-width: 100px;
    text-align: center;
    width: 30%;
  }
  .show_main_photo {
    max-height: 300px;
  }
  .user_photo_review {
    text-align: center;
    max-height: 40px !important;
  }
  .reviewer_photo {
    text-align: center;
    max-height: 40px;
  }
  .view_review_rating > span {
    font-size: 16px;
  }
  .inform-profile >div {
    display: block;
  }

}

.shopping-summery tbody tr img {
  width: 90px !important;
  height: 90px;
  max-width: 120px;
  object-fit: cover;
}


.name-shop {
  font-size: 15px;
}
.left-shop-inform-container_second {
  background-color: white;
  border-radius: 6px;
  box-shadow: 0 0 15px #dadada;
}

.left-shop-inform_second {
  //padding-left: 10px;
}
.single_shop_container {
  margin-top: 20px;
}

//for header maybe (remove gaps)
.header.shop .nav li {
  margin-right: 0px !important;
}

.header.shop .nav.main-menu > li:hover > a{
  background: #ffae44;
}
//discapitalize header buttons
.header.shop .nav li a {
  text-transform: none;
}

.email_change {
  flex-direction: column;
}

.change {
  display: none;
  flex-direction: column;
  width: 300px;
}
.change_confirmation_btn {
  display: none;
}
.password_change {
  display: none;
}
.password_change input{
  display: block;
  margin-bottom: 15px;
}
.product_title_show {
  display: flex;
  justify-content: space-between;
}
/* ... */

